# deepwiki-rs

./: AGENTS.MD  Cargo.toml  litho-example.toml
.ai-context/: DYNAMICS.md  SKILL.md
.ai-context/meta/: MAINTENANCE.md
.ai-context/references/: ARCHITECTURE.md  DECISIONS.md  PROJECT-ESSENCE.md
.skills/ai-context-generator/: README.md  SKILL.md
.skills/ai-context-generator/references/: WRITING-GUIDE.md
.skills/ai-context-generator/scripts/: generate.ts
.skills/ai-context-generator/templates/: architecture.md.tmpl  decisions.md.tmpl  dynamics.md.tmpl  essence.md.tmpl  maintenance.md.tmpl  skill.md.tmpl
src/: cli.rs  config.rs  i18n.rs
src/generator/: agent_executor.rs  step_forward_agent.rs
src/generator/compose/agents/: architecture_editor.rs  overview_editor.rs  workflow_editor.rs
src/generator/preprocess/agents/: code_analyze.rs  code_purpose_analyze.rs  directory_scoring.rs  relationships_analyze.rs
src/generator/preprocess/extractors/: structure_extractor.rs
src/generator/research/: types.rs
src/generator/research/agents/: boundary_analyzer.rs  system_context_researcher.rs
src/llm/client/: providers.rs
src/types/: code.rs
src/utils/: sources.rs
