[package]
name = "deepwiki-rs"
version = "1.3.0"
edition = "2024"

description = "deepwiki-rs(also known as Litho) is a high-performance automatic generation engine for C4 architecture documentation, developed using Rust. It can intelligently analyze project structures, identify core components, parse dependency relationships, and leverage large language models (LLMs) to automatically generate professional architecture documentation."
license = "MIT"
repository = "https://github.com/sopaco/deepwiki-rs"

[dependencies]
# rig
rig-core = "0.23"

# 网络
reqwest = { version = "0.12" }

# 异步运行时
tokio = { version = "1.47", features = ["full"] }

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1"

# 命令行解析
clap = { version = "4.5", features = ["derive"] }

# 配置文件解析
toml = "0.9"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# 文件遍历
walkdir = "2.5"

# 正则表达式
regex = "1.11"

# 哈希计算
md-5 = "0.10"

# Base64 encoding
base64 = "0.22"

# PDF parsing
pdf-extract = "0.7"

# 其他工具
async-trait = "0.1"
rand = "0.9"
pathdiff = "0.2.3"
markdown = "1.0"
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
glob = "0.3"
